kube/deploy/core/storage/volsync/app/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app volsync
  namespace: *app
spec:
  endpointSelector: {}
  ingress:
    # same namespace
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
  egress:
    # same namespace
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: volsync-mover
spec:
  description: "Allow VolSync Mover pods to access network outside cluster for Mover operations"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/created-by: volsync
  egress:
    # allow all to public Internet
    - toEntities:
        - world
